infra/k8s/market-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market
  template:
    metadata:
      labels:
        app: market
    spec:
      containers:
        - name: market
          image: mohamedemad1/market
