infra/k8s/post-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: post-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: post
  ports:
    - name: post
      protocol: TCP
      port: 3000
      targetPort: 3000
