infra/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: social-microservices.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip-service
                port:
                  number: 3000
          - path: /api/post/?(.*)
            pathType: Prefix
            backend:
              service:
                name: post-cluster-ip-service
                port:
                  number: 3000
          - path: /api/product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: market-cluster-ip-service
                port:
                  number: 3000
          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-cluster-ip-service
                port:
                  number: 3000
